[project]
name = "fontknife"
version = "0.1.3"
readme = "README.md"
description = "Rasterize only the glyphs you need."
authors = [
    {name="pushfoo"}
]
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers=[
        "Development Status :: 3 - Alpha",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Intended Audience :: Developers",
        "Topic :: Text Processing :: Fonts",
        "Topic :: Software Development",
        "Topic :: Software Development :: Code Generators",
        "Topic :: Software Development :: Build Tools",
        "Topic :: Games/Entertainment",
        "Topic :: Games/Entertainment :: Arcade",
        "Topic :: Multimedia :: Graphics",
        "Topic :: Multimedia :: Graphics :: Graphics Conversion",
        "Topic :: Software Development :: Libraries",
    ]
dependencies = [
    'pillow==9.4',
    'regex==2022.10.31'  # Provides unicode grapheme support
]


[project.urls]
Homepage = "https://github.com/pushfoo/fontknife"
Issues = "https://github.com/pushfoo/fontknife/issues"
Source = "https://github.com/pushfoo/fontknife"


[project.optional-dependencies]
# Used to build doc, ie readthedocs.org
docs = [
    # Allows reading pyproject.toml in a forward-compatible way
    'tomli==2.0.1 ; python_version < "3.11"',
    'sphinx<7',
    'sphinx-rtd-theme==1.2.2',
]
# Local developer environment
dev = [
    'pytest>=7.1,<8',
    # Allows rebuilding docs/requirements.txt with this command
    # pip-compile --extra=docs --output-file=docs/requirements.txt pyproject.toml
    'pip-tools==7.3.0'
]

[project.scripts]
fontknife = "fontknife.frontend.__main__:main"

[tool.setuptools.packages.find]
include = ["fontknife", "fontknife.*"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
norecursedirs = ["doc", ".venv", "env", "dist"]
